Style!: Fixes several layout issues. Mostly on the front page.

--- a/src/styles/dog-about.module.scss
+++ b/src/styles/dog-about.module.scss
@@ -13,7 +13,7 @@ article.mainDog {
   display: flex;
   align-items: center;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1rem 0;
   flex-direction: column;
 }
 
@@ -187,6 +187,7 @@ article.mainDog {
   margin-top: calc(1rem + 9px);
   // Overwrite defaults so no animations take place.
   @include Theme.imageHover(Theme.$darkHeadshot, Theme.$lightHeadshot) {
+    padding: 0;
     &:hover {
       outline: Theme.$outlineWidth solid Theme.$darkHeadshot;
       background-color: Theme.$lightHeadshot;
