--- a/src/styles/puppy-modal.module.scss
+++ b/src/styles/puppy-modal.module.scss
@@ -3,7 +3,6 @@
 
 .familyData {
   margin: 0;
-  padding: 0;
 }
 
 .parentsLine {
